--- a/ansible/vars.yml
+++ b/ansible/vars.yml
@@ -1,3 +1,6 @@
 db_user=jumia
 db_password=utf8@1234
 db_name=jumia_phone_validator
+
+create_user=xavier
+sys_packages = ["curl","vim","git","ufw"]
