--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -47,17 +47,23 @@
         name: "{{ sys_packages }}"
         state: latest
 
+- hosts: load_balancer
+  become: yes
+  vars_files:
+    - vars.yml
+  roles:
+    - load_balancer
+
 - hosts: db_servers
   become: yes
+  vars_files:
+    - vars.yml
   roles:
     - db_servers
 
 - hosts: web_servers
   become: yes
+  vars_files:
+    - vars.yml
   roles:
     - web_servers
-
-- hosts: load_balancer
-  become: yes
-  roles:
-    - load_balancer
