--- a/ansible/roles/db_servers/tasks/main.yml
+++ b/ansible/roles/db_servers/tasks/main.yml
@@ -1,19 +1,63 @@
-- name: "Install packages"
-  apt: "name={{ item }} state=present"
-  with_items:
-    - postgresql
-    - postgresql-contrib
+- name: Install dependencies for Postgresql
+  apt:
+    name: ["bash", "openssl", "libssl-dev", "libssl-doc"]
+    state: latest
+
+- name: "Install Postgresql"
+  apt:
+    name: ["postgresql", "postgresql-contrib", "libpq-dev", "python3-psycopg2"]
 
 - name: "Find out if PostgreSQL is initialized"
   ansible.builtin.stat:
     path: "/var/lib/pgsql/data/pg_hba.conf"
   register: postgres_data
 
-- name: "Initialize PostgreSQL"
-  shell: "postgresql-setup initdb"
-  when: not postgres_data.stat.exists
-
 - name: "Start and enable services"
-  service: "name={{ item }} state=started enabled=yes"
-  with_items:
-    - postgresql
+  service: "name=postgresql state=started enabled=yes"
+
+- name: "Create database jumia_phone_validator"
+  postgresql_db:
+    state: present
+    name: "{{ db_name }}"
+  become: yes
+  become_user: postgres
+
+- name: "Create database user"
+  postgresql_user:
+    state: present
+    db: "{{db_name}} "
+    name: "{{ db_user }}"
+    password: "{{ db_password }}"
+    priv: ALL
+  become: yes
+  become_user: postgres
+
+- name: "Restrict User permissions"
+  postgresql_user:
+    state: present
+    name: "{{ db_user }}"
+    role_attr_flags: NOSUPERUSER,NOCREATEDB
+
+- name: "Allow md5 connection to the db user"
+  postgresql_pg_hba:
+    dest: "~/main/pg_hba.conf"
+    contype: host
+    databases: all
+    method: md5
+    users: "{{ db_user }}"
+    create: true
+  become: yes
+  become_user: postgres
+  notify: restart postgres
+
+- name: "Copy sample database to remote server"
+  copy:
+    src: jumia_phone_validator/database/sample.sql
+    dest: $HOME/sample.sql
+    owner: postgres
+    group: postgres
+
+- name: "Load sample database to Postgresql db"
+  shell: psql {{db_name}} < $HOME/sample.sql
+  become: yes
+  become_user: postgres
