--- a/ansible/roles/load_balancer/files/nginx.cfg
+++ b/ansible/roles/load_balancer/files/nginx.cfg
@@ -1,10 +1,10 @@
 upstream backend  {
-  ip:8080;
+  server 3.8.236.93:8080;
  
 }
 
 upstream frontend {
-  ip:8081;
+  server 3.8.236.93:8081;
 }
 
 server {
@@ -14,6 +14,7 @@ server {
   location / {
     proxy_read_timeout 300s;
     proxy_pass  http://frontend;  #pass all requests processed to frontend server
+    
   }
 
   server_name backend;
