--- a/ansible/roles/db_servers/tasks/main.yml
+++ b/ansible/roles/db_servers/tasks/main.yml
@@ -1,3 +1,24 @@
+# UFW setup
+
+- name: Allow ssh traffic
+  ufw:
+    rule: allow
+    port: "{{ ssh_port }}"
+    proto: tcp
+
+- name: Allow tcp traffic port 5432
+  ufw:
+    rule: allow
+    from_ip: 3.8.236.93
+    port: 5432
+    proto: tcp
+
+- name: Enable firewall
+  ufw:
+    state: enabled
+    policy: deny
+    direction: incoming
+
 - name: Install dependencies for Postgresql
   apt:
     name: ["bash", "openssl", "libssl-dev", "libssl-doc"]
